# sandstorm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/: Caddyfile  install.sh  sandstorm-mcp.service
server/: .gitignore  README.md  pyproject.toml
server/src/sandstorm_mcp/: __init__.py  app.py  auth.py  config.py  exec_core.py  health.py  logging_setup.py  main.py  security.py  sessions.py
server/src/sandstorm_mcp/tools/: __init__.py  file_ops.py  git_ops.py  terminal.py  workspace.py
server/tests/: test_auth.py  test_security.py  test_tools.py
