[project]
name = "sandstorm-mcp"
version = "0.1.0"
description = "Self-hosted FastMCP server giving AI agents file, terminal, and git access on a remote Linux host."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Logos Flux", email = "lf@logosflux.io" },
]
dependencies = [
    "fastmcp>=2.11.0",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandstorm_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
